<resources>
    <string name="app_name">Text Finder</string>
    <string name="editTextHint">Search for...</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pdf">PDF</string>
    <string name="capture">Capture</string>
    <string name="new_picture">New Picture</string>
    <string name="contentDescription">contentDescription</string>
    <string name="new_pdf">New PDF</string>
    <string name="info">G - exact match\nY - partial match\nR - no match</string>
    <string name="title_activity_info">Leanback InfoActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>