<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.appcade.textfinder.ZoomableImageView
        android:id="@+id/zoomableImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/inputWord"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:gravity="center"
        android:textSize="28sp"
        android:visibility="visible"
        android:hint="@string/editTextHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:background="@drawable/rounded_button_30"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:background="@drawable/rounded_button_30"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/pdfButton"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:background="@drawable/rounded_button_30"
        android:backgroundTint="@color/grey"
        android:text="@string/pdf"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/capture"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:background="@drawable/rounded_button_15"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/newPictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_picture"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:background="@drawable/rounded_button_15"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/retakeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/camera"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:background="@drawable/rounded_button_15"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageButton
        android:id="@+id/nextPageButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:contentDescription="@string/contentDescription"
        android:gravity="center"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:foreground="@mipmap/next_icon_foreground"
        android:background="@drawable/rounded_button_15"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageButton
        android:id="@+id/prevPageButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:gravity="center"
        android:contentDescription="@string/contentDescription"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:background="@drawable/rounded_button_15"
        android:backgroundTint="@color/grey"
        android:foreground="@mipmap/previous_icon_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/newPDFButton"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:gravity="center"
        android:text="@string/new_pdf"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:background="@drawable/rounded_button_15"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/pageCounterTV"
        android:layout_width="200sp"
        android:layout_height="100sp"
        android:text=""
        android:textColor="@color/black"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@drawable/rounded_button_15"
        android:backgroundTint="@color/grey"
        android:contentDescription="@string/contentDescription"
        android:foreground="@mipmap/home_icon_foreground"
        android:gravity="center"
        android:text=""
        android:visibility="visible"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@drawable/rounded_button_15"
        android:backgroundTint="@color/grey"
        android:contentDescription="@string/contentDescription"
        android:foreground="@mipmap/info_icon_foreground"
        android:gravity="center"
        android:text=""
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/versionTV"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="12sp"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>